Fixed MAGETWO-9652: [Piece of Cake] Numbers are not clearly visible in QTY field on shopping cart page [IE8] - Search Field scroll bug fixed

--- a/app/design/frontend/magento2/piece-of-cake/css/styles.less
+++ b/app/design/frontend/magento2/piece-of-cake/css/styles.less
@@ -1521,7 +1521,7 @@ select {
         border-color: #b5b5b5;
         border-right: 0;
         float: left;
-        line-height: 29px;
+        line-height: 1;
         height: 29px;
         width: 100%;
     }
